<resources>
    <string name="app_name">TinaCamera</string>
    <string name="hint_pwd_input">请输入密码</string>
    <string name="hint_input_username">请输入用户名</string>
    <string name="hint_input_ip">请输入服务器IP</string>
    <string name="server_ip">182.92.168.177</string>
    <string name="default_server_ip">182.92.168.177</string>
    <string name="default_username">admin</string>
    <string name="default_pwd">admin</string>
    <string name="hint_input_port">请输入服务器端口</string>
    <string name="default_server_port">3000</string>
    <string name="btn_text_login">登陆</string>
    <string name="play">播放</string>
</resources>
